--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "jose": "^6.0.11",
+    "next": "14.2.28",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.28"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^5.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "14.2.28",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.28"
+    "typescript": "^5.8.3"
   }
 }
