--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.7",
     "axios": "^1.9.0",
     "jose": "^6.0.11",
     "next": "14.2.28",
